--- a/Week6/coffee_shop/index.html
+++ b/Week6/coffee_shop/index.html
@@ -22,6 +22,7 @@
 <h1>Cosmic Coffee</h1><h3>"Coffee that's out of this world!"</h3><br><br>
 <h2>Main Menu:</h2>
 </header>
+<main>
     <!--first shop item-->
     <section class="container mycontent-section">   
     <div class="tiny-items">
@@ -64,8 +65,9 @@
         <strong>Total</strong>
         <span class="total-price">$0</span>
     </div>
-    <button class="buy-button" type="button">Purchase</button>
+    <button class="buy-button" type="button">BUY</button>
 </section>
+</main>
 <footer id="myfooter">
     <div>
         <h4>Contact Info:</h4>
