--- a/Week6/coffee_shop/index.html
+++ b/Week6/coffee_shop/index.html
@@ -67,7 +67,7 @@
     </div>
     <button class="buy-button" type="button">BUY</button>
 </section>
-</main>
+</body>
 <footer id="myfooter">
     <div>
         <h4>Contact Info:</h4>
