--- a/Week6/coffee_shop/index.html
+++ b/Week6/coffee_shop/index.html
@@ -24,7 +24,7 @@
 </header>
 <main>
     <!--first shop item-->
-    <section class="container mycontent-section">   
+    <section class="container">   
     <div class="tiny-items">
      <div> 
       <span class="item-Name">"Cosmic Coffee"</span>
@@ -53,11 +53,7 @@
   </div>
  </div>
 </section>
-<section class="container content-section">
-    <div class="main-row">
-        <span class="item-column"></span>
-        <span class="price-column"></span>
-        <span class="quantity-column"></span>
+<section class="container">
     </div>
     <div class="main-items">
     </div>
@@ -67,14 +63,15 @@
     </div>
     <button class="buy-button" type="button">BUY</button>
 </section>
-</body>
+</main>
+
 <footer id="myfooter">
     <div>
         <h4>Contact Info:</h4>
         <ul>
             <ul>
                 <li><a href="#">Email: Bortiz4ever@gmail.com</a></li>
-                <li><a href="#">Website Address: "www.CosmicCoffee.com</a></li>
+                <li><a href="#">Archer Avenue, Chicago, Illinois</a></li>
                 <li><a href="#">Website URL:http://127.0.0.1:60704/FSW-110/Week6/coffee_shop/index.html</a></li>
             </ul>
      </div>
